Fixing vertical alignment

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
     color: #000;
     background-color: #fff;
     font-family: 'Poppins', sans-serif;
+    height: 100%;
 }
 
 .orange {
